--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap-vue": "^2.5.0",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
-  },
-  "devDependencies": {
+    "uuid": "^3.4.0",
+    "vue": "^2.6.11",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
